[package]
name = "mpu6050-dmp"
version = "0.2.0"
authors = [
    "Bob McWhirter <bmcwhirt@redhat.com>",
    "Rafael Bachmann <rafael.bachmann.93@gmail.com",
]
edition = "2021"
license = "Apache-2.0"
description = "InvenSense MPU-6050 i2c Driver"
keywords = ["driver", "i2c", "motion", "dmp", "no_std"]
categories = ["no-std", "embedded"]
readme = "README.md"

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
libm = "0.2.1"
